Fix replacement button z-index

--- a/src/blocks/svg-icon-maxi/editor.scss
+++ b/src/blocks/svg-icon-maxi/editor.scss
@@ -21,7 +21,7 @@
 		top: 0;
 		right: 0;
 		background: #232533;
-		z-index: 11;
+		z-index: 25;
 
 		svg {
 			fill: #fff;
